This works as wrokaround for KIO missing implementation in DELETE & CUSTOM access manager operations It will be removed when we'll implement it in the right place.

BUG: 249275